kubernetes/ingress-api.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.triangl.io
    secretName: api-crt-prod
  rules:
  - host: api.triangl.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
