kubernetes/ingress-ingestion.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/whitelist-source-range: "1.1.1.1/24" # PLACEHOLDER -> individual static customer IP's will be added
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.triangl.io
    http:
      paths:
      - path: /tracking-ingestion-service
        backend:
          serviceName: tracking-ingestion-service
          servicePort: 8080
