kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - triangl.io
    secretName: crt-triangl-io
  - hosts:
    - app.triangl.io
    secretName: crt-app-triangl-io
  - hosts:
    - api.triangl.io
    secretName: crt-api-triangl-io
  rules:
  - host: app.triangl.io
    http:
      paths:
      - path: /
        backend:
          serviceName: dashboard
          servicePort: 80
  - host: api.triangl.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /dashboard-service
        backend:
          serviceName: dashboard-service
          servicePort: 8080
