kubernetes/setup-cluster-test.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: test-deployment
spec:
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
      - name: test-deployment
        image: nginx

---

kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - triangl.io
    secretName: crt-test
  rules:
  - host: triangl.io
    http:
      paths:
      - path: /test
        backend:
          serviceName: test-service
          servicePort: 80
